fix flaky can dhutdowns

--- a/mr2_arm_fw.ioc
+++ b/mr2_arm_fw.ioc
@@ -6,12 +6,12 @@ CORTEX_M33_NS.userName=CORTEX_M33
 FDCAN1.AutoRetransmission=ENABLE
 FDCAN1.CalculateBaudRateNominal=1000000
 FDCAN1.CalculateTimeBitNominal=1000
-FDCAN1.CalculateTimeQuantumNominal=40.0
+FDCAN1.CalculateTimeQuantumNominal=20.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,TransmitPause,AutoRetransmission
-FDCAN1.NominalPrescaler=10
-FDCAN1.NominalTimeSeg1=19
-FDCAN1.NominalTimeSeg2=5
-FDCAN1.TransmitPause=ENABLE
+FDCAN1.NominalPrescaler=5
+FDCAN1.NominalTimeSeg1=43
+FDCAN1.NominalTimeSeg2=6
+FDCAN1.TransmitPause=DISABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
