--- a/mr2_arm_fw.ioc
+++ b/mr2_arm_fw.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+BOOTPATH.BootPathName=LEGACY
+BOOTPATH.IPParameters=BootPathName
+BOOTPATH.UserSelectedBootPath=LEGACY
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -29,7 +32,8 @@ Mcu.IP1=CORTEX_M33_NS
 Mcu.IP10=RCC
 Mcu.IP11=SYS
 Mcu.IP12=TIM1
-Mcu.IP13=USART2
+Mcu.IP13=TIM2
+Mcu.IP14=USART2
 Mcu.IP2=DEBUG
 Mcu.IP3=FDCAN1
 Mcu.IP4=I2C1
@@ -38,7 +42,7 @@ Mcu.IP6=ICACHE
 Mcu.IP7=MEMORYMAP
 Mcu.IP8=NVIC
 Mcu.IP9=PWR
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32H523CETx
 Mcu.Package=LQFP48
 Mcu.Pin0=PH0-OSC_IN(PH0)
@@ -52,9 +56,10 @@ Mcu.Pin15=VP_PWR_VS_SECSignals
 Mcu.Pin16=VP_PWR_VS_LPOM
 Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin19=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA1
-Mcu.Pin20=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin21=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PB10
@@ -62,7 +67,7 @@ Mcu.Pin6=PB12
 Mcu.Pin7=PA11
 Mcu.Pin8=PA12
 Mcu.Pin9=PA13(JTMS/SWDIO)
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H523CETx
@@ -70,7 +75,6 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -81,11 +85,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA1.GPIOParameters=GPIO_PuPd
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
-PA1.Signal=GPXTI1
+PA1.Signal=GPIO_Input
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -225,12 +228,13 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=500000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=Prescaler,PeriodNoDither,AutoReloadPreload
 TIM1.PeriodNoDither=999
 TIM1.Prescaler=24999
+TIM2.IPParameters=Prescaler,PeriodNoDither
+TIM2.PeriodNoDither=999
+TIM2.Prescaler=2499
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
@@ -249,4 +253,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
