--- a/mr2_arm_fw/mr2_arm_fw.ioc
+++ b/mr2_arm_fw/mr2_arm_fw.ioc
@@ -47,32 +47,31 @@ Mcu.Name=STM32H523CETx
 Mcu.Package=LQFP48
 Mcu.Pin0=PH0-OSC_IN(PH0)
 Mcu.Pin1=PH1-OSC_OUT(PH1)
-Mcu.Pin10=PB12
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13(JTMS/SWDIO)
-Mcu.Pin14=PA14(JTCK/SWCLK)
-Mcu.Pin15=PB3(JTDO/TRACESWO)
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin19=VP_ICACHE_VS_ICACHE
-Mcu.Pin2=PA1
-Mcu.Pin20=VP_PWR_VS_SECSignals
-Mcu.Pin21=VP_PWR_VS_LPOM
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin25=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin26=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB10
-Mcu.PinsNb=27
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13(JTMS/SWDIO)
+Mcu.Pin13=PA14(JTCK/SWCLK)
+Mcu.Pin14=PB3(JTDO/TRACESWO)
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin18=VP_ICACHE_VS_ICACHE
+Mcu.Pin19=VP_PWR_VS_SECSignals
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_PWR_VS_LPOM
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin24=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin25=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB10
+Mcu.Pin9=PB12
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H523CETx
@@ -90,10 +89,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.GPIOParameters=GPIO_PuPd
-PA1.GPIO_PuPd=GPIO_PULLUP
-PA1.Locked=true
-PA1.Signal=GPIO_Input
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -164,7 +159,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
