--- a/mr2_arm_fw/mr2_arm_fw.ioc
+++ b/mr2_arm_fw/mr2_arm_fw.ioc
@@ -88,6 +88,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
@@ -256,7 +257,7 @@ TIM1.PeriodNoDither=999
 TIM1.Prescaler=24999
 TIM2.IPParameters=Prescaler,PeriodNoDither
 TIM2.PeriodNoDither=999
-TIM2.Prescaler=2499
+TIM2.Prescaler=499
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
